--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,9 +35,11 @@ android {
     }
     buildFeatures {
         compose true
+        viewBinding true
     }
     composeOptions {
-        kotlinCompilerExtensionVersion "1.1.1"
+        kotlinCompilerVersion "1.5.20"
+        kotlinCompilerExtensionVersion "1.4.3"
     }
     packagingOptions {
         resources {
@@ -53,7 +55,7 @@ dependencies {
     implementation 'androidx.activity:activity-compose:1.1.1'
     implementation "androidx.compose.ui:ui:1.1.1"
     implementation "androidx.compose.material:material:1.3.1"
-    implementation "androidx.compose.compiler:compiler:1.1.1"
+    implementation "androidx.compose.compiler:compiler:1.4.3"
     implementation "androidx.compose.ui:ui-tooling-preview:1.1.1"
     implementation "androidx.ui:ui-tooling:1.0.0-alpha07"
     implementation "androidx.compose.runtime:runtime:1.1.1"
