--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,7 +58,7 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
     implementation 'androidx.activity:activity-compose:1.1.1'
     implementation "androidx.compose.ui:ui:1.1.1"
-    implementation "androidx.compose.material:material:1.3.1"
+    implementation "androidx.compose.material:material:1.4.0-beta01"
     implementation "androidx.compose.compiler:compiler:1.4.3"
     implementation "androidx.compose.ui:ui-tooling-preview:1.1.1"
     implementation "androidx.ui:ui-tooling:1.0.0-alpha07"
